# ORE

./: .env.example  .gitignore  AGENTS.md  COMMANDS.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json
ai-rag/: CONTRIBUTING.md  Makefile  README.md  chunking.py  config.py  dev_test.py  embedding.py  ingestion.py  pdf_chunking.py  pdf_embedding.py  pdf_ingestion.py  pyproject.toml  requirements.txt  retriever.py  vector_store.py
ai-rag/chroma_db/37957e69-5cec-4b01-bd16-447ffb2e6eaf/: index_metadata.pickle
ai-rag/embedding/: embedder.py
ai-rag/generation/: answer_questions.py  notes.py  viva.py
ai-rag/tests/: conftest.py  test_chunking.py  test_embedding.py  test_ingestion.py
backend/: .gitignore  Makefile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/tests/: test_smoke.py
docs/: GETTING-STARTED.md
frontend/: README.md  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
